# EstateAgency

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_VIOLATIONS.md  CMakeLists.txt  README.md  algorithms_flowcharts.puml  class_diagram.puml  generate_document(1).py  generate_document.py  ВВЕДЕНИЕ.md  ЗАКЛЮЧЕНИЕ.md  ОБЗОР_АНАЛОГОВ.md  ОПИСАНИЕ_КЛЮЧЕВЫХ_ФУНКЦИЙ.md  ОПИСАНИЕ_ОСНОВНЫХ_ФУНКЦИЙ.md  ОПИСАНИЕ_ФУНКЦИЙ.md  ПОСТАНОВКА_ЗАДАЧИ.md  ТЕХНОЛОГИИ.md  ТЕХНОЛОГИИ_И_АРХИТЕКТУРА.md
include/: AuctionsWidget.h  ClientsWidget.h  DashboardWidget.h  MainWindow.h  PropertiesWidget.h  PropertyDialog.h  TransactionsWidget.h
include/core/: Constants.h  EstateAgency.h  Utils.h
include/entities/: Apartment.h  Auction.h  Bid.h  Client.h  CommercialProperty.h  House.h  Property.h  PropertyParams.h  Transaction.h
include/services/: AuctionManager.h  ClientManager.h  FileManager.h  PropertyManager.h  TransactionManager.h
include/ui/: AuctionDialog.h  AuctionsWidget.h  ClientDialog.h  ClientsWidget.h  DashboardWidget.h  MainWindow.h  PropertiesWidget.h  PropertyDialog.h  TableHelper.h  TransactionDialog.h  TransactionsWidget.h
src/: AuctionsWidget.cpp  ClientsWidget.cpp  DashboardWidget.cpp  MainWindow.cpp  PropertiesWidget.cpp  TransactionsWidget.cpp  main.cpp
src/core/: EstateAgency.cpp
src/entities/: Apartment.cpp  Auction.cpp  Bid.cpp  Client.cpp  CommercialProperty.cpp  House.cpp  Property.cpp  Transaction.cpp
src/services/: AuctionManager.cpp  ClientManager.cpp  FileManager.cpp  PropertyManager.cpp  TransactionManager.cpp
src/ui/: AuctionDialog.cpp  AuctionsWidget.cpp  ClientDialog.cpp  ClientsWidget.cpp  DashboardWidget.cpp  HtmlFormatter.cpp  MainWindow.cpp  PropertiesWidget.cpp  PropertyDialog.cpp  TableHelper.cpp  TransactionDialog.cpp  TransactionsWidget.cpp
